definitions/carson-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: kube-decon
  labels:
    name: kube-decon
