definitions/readiness-probe.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: readiness-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5    # Wait 5 seconds before starting probe
      periodSeconds: 5          # Run probe every 5 seconds
